--- a/index.html
+++ b/index.html
@@ -7,18 +7,58 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Header Section with Logo -->
   <header>
-    <h1>Welcome to Sons of Legacy</h1>
-    <p>Honoring the Past, Embracing the Future</p>
+    <div class="logo">
+      <img src="sonsoflegacy-logo.png" alt="Sons of Legacy Logo">
+    </div>
+    <h1>Welcome to Sons of Legacy Gang Official Page</h1>
+    <p>Honoring our past, celebrating our victories, and building a legacy.</p>
   </header>
 
-  <section>
+  <!-- About Section -->
+  <section class="about">
     <h2>About Us</h2>
-    <p>The Sons of Legacy is a community of like-minded individuals dedicated to preserving history, tradition, and making a lasting impact on the future.</p>
+    <p>The Sons of Legacy is a community of brothers united in strength, honor, and tradition. Our journey is built on victories and experiences that we cherish and share with the world.</p>
   </section>
 
+  <!-- Victories Gallery -->
+  <section class="gallery">
+    <h2>Watch Our Victories</h2>
+    <p>Check out some of our best moments captured in these galleries.</p>
+
+    <!-- Gallery 1 -->
+    <div class="gallery-item">
+      <h3>Gallery 1: Our Epic Wins</h3>
+      <div class="photos">
+        <img src="victory1.jpg" alt="Victory Photo 1">
+        <img src="victory2.jpg" alt="Victory Photo 2">
+        <img src="victory3.jpg" alt="Victory Photo 3">
+      </div>
+    </div>
+
+    <!-- Gallery 2 -->
+    <div class="gallery-item">
+      <h3>Gallery 2: Brotherhood in Action</h3>
+      <div class="photos">
+        <img src="brotherhood1.jpg" alt="Brotherhood Photo 1">
+        <img src="brotherhood2.jpg" alt="Brotherhood Photo 2">
+        <img src="brotherhood3.jpg" alt="Brotherhood Photo 3">
+      </div>
+    </div>
+  </section>
+
+  <!-- YouTube Channel Link -->
+  <section class="youtube">
+    <h2>Follow Us on YouTube</h2>
+    <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
+    <a href="https://www.youtube.com/channel/yourchannel" target="_blank">Visit Our YouTube Channel</a>
+  </section>
+
+  <!-- Footer Section -->
   <footer>
     <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
+
