--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header Section with Logo -->
   <header>
     <div class="logo">
-      <img src="sonsoflegacy-logo.png" alt="Sons of Legacy Logo">
+      <img src="https://i.postimg.cc/y869vnYT/sonsoflegacyblainecounty.jpg" alt="Sons of Legacy Logo">
     </div>
     <h1>Welcome to Sons of Legacy Gang Official Page</h1>
     <p>Honoring our past, celebrating our victories, and building a legacy.</p>
@@ -27,23 +27,23 @@
     <h2>Watch Our Victories</h2>
     <p>Check out some of our best moments captured in these galleries.</p>
 
-    <!-- Gallery 1 -->
+    <!-- Gallery 1: Epic Wins -->
     <div class="gallery-item">
       <h3>Gallery 1: Our Epic Wins</h3>
       <div class="photos">
-        <img src="victory1.jpg" alt="Victory Photo 1">
-        <img src="victory2.jpg" alt="Victory Photo 2">
-        <img src="victory3.jpg" alt="Victory Photo 3">
+        <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Against Yakuza">
+        <img src="https://i.postimg.cc/7L2p88Zr/Screenshot-702.png" alt="Against TLMC">
+        <img src="https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png" alt="Against RHPD">
       </div>
     </div>
 
-    <!-- Gallery 2 -->
+    <!-- Gallery 2: Brotherhood in Action -->
     <div class="gallery-item">
       <h3>Gallery 2: Brotherhood in Action</h3>
       <div class="photos">
-        <img src="brotherhood1.jpg" alt="Brotherhood Photo 1">
-        <img src="brotherhood2.jpg" alt="Brotherhood Photo 2">
-        <img src="brotherhood3.jpg" alt="Brotherhood Photo 3">
+        <img src="https://i.postimg.cc/Y9n6WWf2/brotherhood1.jpg" alt="Brotherhood Photo 1">
+        <img src="https://i.postimg.cc/Y9n6WWf2/brotherhood2.jpg" alt="Brotherhood Photo 2">
+        <img src="https://i.postimg.cc/Y9n6WWf2/brotherhood3.jpg" alt="Brotherhood Photo 3">
       </div>
     </div>
   </section>
@@ -61,4 +61,3 @@
   </footer>
 </body>
 </html>
-
