--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sons of Legacy</title>
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Header Section with Logo -->
@@ -56,5 +55,8 @@
   <footer>
     <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
   </footer>
+
+  <!-- Link the JavaScript file -->
+  <script src="script.js" defer></script>
 </body>
 </html>
