--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sons of Legacy</title>
+  <!-- Link to the external CSS file -->
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -35,28 +36,4 @@
         <img src="https://i.postimg.cc/7L2p88Zr/Screenshot-702.png" alt="Against TLMC" class="clickable">
         <img src="https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png" alt="Against RHPD" class="clickable">
       </div>
-      <!-- Hidden images container for click-to-expand -->
-      <div class="expanded-gallery" style="display: none;">
-        <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Against Yakuza">
-        <img src="https://i.postimg.cc/7L2p88Zr/Screenshot-702.png" alt="Against TLMC">
-        <img src="https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png" alt="Against RHPD">
-      </div>
-    </div>
-  </section>
-
-  <!-- YouTube Channel Link -->
-  <section class="youtube">
-    <h2>Follow Us on YouTube</h2>
-    <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
-    <a href="https://www.youtube.com/channel/yourchannel" target="_blank">Visit Our YouTube Channel</a>
-  </section>
-
-  <!-- Footer Section -->
-  <footer>
-    <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
-  </footer>
-
-  <!-- Link the JavaScript file -->
-  <script src="script.js" defer></script>
-</body>
-</html>
+      <!-- Hidden images container for click-to-exp
