--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <title>Sons of Legacy</title>
   <!-- Link to the external CSS file -->
   <link rel="stylesheet" href="styles.css">
+  <script>
+    // JavaScript to handle image expansion when clicked
+    function expandImage(imgSrc) {
+      const expandedGallery = document.getElementById('expanded-gallery');
+      const expandedImage = document.getElementById('expanded-image');
+      expandedImage.src = imgSrc;
+      expandedGallery.style.display = 'block';
+    }
+
+    // Function to close the expanded gallery
+    function closeGallery() {
+      const expandedGallery = document.getElementById('expanded-gallery');
+      expandedGallery.style.display = 'none';
+    }
+  </script>
 </head>
 <body>
   <!-- Header Section with Logo -->
@@ -32,8 +47,12 @@
     <div class="gallery-item">
       <h3>Gallery 1: Our Epic Wins</h3>
       <div class="photos">
-        <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Against Yakuza" class="clickable">
-        <img src="https://i.postimg.cc/7L2p88Zr/Screenshot-702.png" alt="Against TLMC" class="clickable">
-        <img src="https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png" alt="Against RHPD" class="clickable">
+        <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Against Yakuza" class="clickable" onclick="expandImage('https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png')">
+        <img src="https://i.postimg.cc/7L2p88Zr/Screenshot-702.png" alt="Against TLMC" class="clickable" onclick="expandImage('https://i.postimg.cc/7L2p88Zr/Screenshot-702.png')">
+        <img src="https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png" alt="Against RHPD" class="clickable" onclick="expandImage('https://i.postimg.cc/Y9n6WWf2/Screenshot-681.png')">
       </div>
-      <!-- Hidden images container for click-to-exp
+    </div>
+
+    <!-- Expanded Image Gallery (Initially Hidden) -->
+    <div id="expanded-gallery" class="expanded-gallery" onclick="closeGallery()">
+      <img id="expanded-i
