--- a/index.html
+++ b/index.html
@@ -55,4 +55,20 @@
 
     <!-- Expanded Image Gallery (Initially Hidden) -->
     <div id="expanded-gallery" class="expanded-gallery" onclick="closeGallery()">
-      <img id="expanded-i
+      <img id="expanded-image" src="" alt="Expanded Image">
+    </div>
+  </section>
+
+  <!-- YouTube Channel Link -->
+  <section class="youtube">
+    <h2>Follow Us on YouTube</h2>
+    <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
+    <a href="https://www.youtube.com/channel/yourchannel" target="_blank">Visit Our YouTube Channel</a>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
