--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Sons of Legacy</title>
   <!-- Link to the external CSS file -->
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
   <script>
     // JavaScript to handle image expansion and gallery toggle
     function toggleGallery() {
@@ -35,6 +36,7 @@
   <!-- Header Section with Logo -->
   <header>
     <div class="logo">
+      <!-- Link to the homepage with the logo -->
       <a href="#">
         <img src="https://i.postimg.cc/y869vnYT/sonsoflegacyblainecounty.jpg" alt="Sons of Legacy Logo">
       </a>
@@ -57,8 +59,8 @@
     <!-- Gallery 1: Our Epic Wins -->
     <div class="gallery-item">
       <h3>Gallery 1: Our Epic Wins</h3>
-      
-      <!-- Add the logo for this gallery, wrapped in a link -->
+
+      <!-- Gallery Logo for Epic Wins (This logo opens the gallery when clicked) -->
       <div class="gallery-logo">
         <a href="#" onclick="toggleGallery()">
           <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Epic Wins Logo" class="clickable-logo">
