--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
   <section class="youtube">
     <h2>Follow Us on YouTube</h2>
     <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
-    <a href="https://www.youtube.com/channel/yourchannel" target="_blank">Visit Our YouTube Channel</a>
+
+    <!-- YouTube Logo that links to the channel -->
+    <a href="https://www.youtube.com/@BunnyZod" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
+    </a>
   </section>
 
   <!-- Footer Section -->
