--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
   <section class="youtube">
     <h2>Follow Us on YouTube</h2>
     <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
-
-    <!-- YouTube Logo that links to the channel -->
+    <!-- YouTube Logo with link -->
     <a href="https://www.youtube.com/@BunnyZod" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
     </a>
   </section>
 
