--- a/index.html
+++ b/index.html
@@ -83,17 +83,18 @@
 
   <!-- YouTube Channel Link -->
   <section class="youtube">
-    <h2>Follow Us on YouTube</h2>
-    <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
-    <!-- YouTube Logo with link -->
-    <a href="https://www.youtube.com/@BunnyZod" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
-    </a>
-  </section>
+  <h2>Follow Us on YouTube</h2>
+  <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
 
-  <!-- Footer Section -->
-  <footer>
-    <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
-  </footer>
+  <!-- YouTube Logo that links to the channel -->
+  <a href="https://www.youtube.com/@BunnyZod" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
+  </a>
+</section>
+
+<!-- Footer Section -->
+<footer>
+  <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
+</footer>
 </body>
 </html>
