--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Gallery Logo for Epic Wins (This logo opens the gallery when clicked) -->
       <div class="gallery-logo">
         <a href="#" onclick="toggleGallery()">
-          <img src="https://i.postimg.cc/TP5Xd5QS/Screenshot-678.png" alt="Epic Wins Logo" class="clickable-logo">
+          <img src="" alt="Epic Wins Logo" class="clickable-logo">
         </a>
       </div>
 
@@ -77,7 +77,7 @@
 
     <!-- Expanded Image Gallery (Initially Hidden) -->
     <div id="expanded-gallery" class="expanded-gallery" onclick="closeGallery()">
-      <img id="expanded-image" src="" alt="Expanded Image">
+      <img id="expanded-image" src="https://i.postimg.cc/y869vnYT/sonsoflegacyblainecounty.jpg" alt="Expanded Image">
     </div>
   </section>
 
