--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <!-- Gallery Logo for Epic Wins (This logo opens the gallery when clicked) -->
       <div class="gallery-logo">
         <a href="#" onclick="toggleGallery()">
-          <img src="" alt="Epic Wins Logo" class="clickable-logo">
+          <!-- Replaced with provided link -->
+          <img src="https://i.postimg.cc/y869vnYT/sonsoflegacyblainecounty.jpg" alt="Epic Wins Logo" class="clickable-logo">
         </a>
       </div>
 
@@ -83,18 +84,19 @@
 
   <!-- YouTube Channel Link -->
   <section class="youtube">
-  <h2>Follow Us on YouTube</h2>
-  <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
+    <h2>Follow Us on YouTube</h2>
+    <p>Stay up to date with our latest victories and adventures. Watch our videos on YouTube!</p>
 
-  <!-- YouTube Logo that links to the channel -->
-  <a href="https://www.youtube.com/@BunnyZod" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
-  </a>
-</section>
+    <!-- YouTube Logo that links to the channel -->
+    <a href="https://www.youtube.com/@BunnyZod" target="_blank">
+      <!-- YouTube Logo -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
+    </a>
+  </section>
 
-<!-- Footer Section -->
-<footer>
-  <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
-</footer>
+  <!-- Footer Section -->
+  <footer>
+    <p>© 2024 Sons of Legacy. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
