--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <!-- YouTube Logo that links to the channel -->
     <a href="https://www.youtube.com/@BunnyZod" target="_blank">
-      <!-- YouTube Logo -->
+      <!-- YouTube Logo with adjusted size -->
       <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/YouTube_icon_%282013-2017%29.png" alt="YouTube Logo" class="youtube-logo">
     </a>
   </section>
